@@ -50,7 +50,6 @@ pm-tungsten-chunks=Tungsten chunks
 pm-tungsten-crystals=Tungsten crystals
 pm-wolframite=Wolframite
 pm-titanium-oxide=Titanium oxide
-pm-titanium-chloride=Titanium chloride
 pm-tin-ore=Tin ore
 pm-white-tin=White tin
 pm-black-tin=Black tin
@@ -659,6 +658,7 @@ pm-ferrous-waste-water=Ferrous waste water
 pm-cupric-waste-water=Cupric waste water
 pm-liquid-heat=Heat
 pm-aluminium-hydroxide-slurry=Aluminium hydroxide slurry
+pm-titanium-chloride=Titanium chloride
 
 [recipe-name]
 pm-transition-metal-clearing=Transition metal clearing
