@@ -313,7 +313,8 @@ data:extend({
     pictures =
     {
       {filename = "__periodic-madness__/graphics/icons/ores/arsenic-ore-icon.png", size = 64, scale = 0.5},
-      {filename = "__periodic-madness__/graphics/icons/ores/arsenic-ore-icon-2.png", size = 64, scale = 0.5}
+      {filename = "__periodic-madness__/graphics/icons/ores/arsenic-ore-icon-2.png", size = 64, scale = 0.5},
+      {filename = "__periodic-madness__/graphics/icons/ores/arsenic-ore-icon-3.png", size = 64, scale = 0.5},
     },
     subgroup = "pm-lead-ptm",
     order = "d",
@@ -565,6 +566,13 @@ data:extend({
     name = "pm-barium-ore",
     icon_size = 64,
     icon = "__periodic-madness__/graphics/icons/ores/barium-ore-icon.png",
+    pictures =
+    {
+      {filename = "__periodic-madness__/graphics/icons/ores/barium-ore-icon.png", size = 64, scale = 0.5},
+      {filename = "__periodic-madness__/graphics/icons/ores/barium-ore-icon-2.png", size = 64, scale = 0.5},
+      {filename = "__periodic-madness__/graphics/icons/ores/barium-ore-icon-3.png", size = 64, scale = 0.5},
+      {filename = "__periodic-madness__/graphics/icons/ores/barium-ore-icon-4.png", size = 64, scale = 0.5},
+    },
     subgroup = "pm-antimony-mt",
     order = "e",
     stack_size = 200
