@@ -72,6 +72,7 @@ Date: 2024-12-08
     - Changed fission equipment to be 3x3, not 4x4.
     - Changed lithium-sulfur MK1 equipment to store 30MJ.
     - Changed vanadium equipment MK1's to discharge 500kW, and MK2's to discharge 1MW.
+    - Changed titanium chloride into the fluid, instead of an item.
 
   Fixes:
     - Fixed the science pack item names captilisation.
